--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PORTOFOLIO</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <div class="HEADER">
+        
+    </div>
+    <!-- ISI -->
+    <div class="ISI">
+
+    </div>
+    <!-- FOOTER -->
+    <div class="FOOTER">
+
+    </div>
 </body>
 </html>
